[quartz] Correctly handle gradients with non-identity pattern transform

Fixes http://bugs.freedesktop.org/show_bug.cgi?id=14248